7.95
Improve folder load tree